add notification, fix job and rating, add budget hanlder