@@ -5,6 +5,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import com.group2.handyman.controller.NotificationService;
 import com.group2.handyman.model.*;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.boot.SpringApplication;
@@ -13,13 +14,12 @@ import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfi
 import org.springframework.context.annotation.Bean;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-@SpringBootApplication(exclude = {SecurityAutoConfiguration.class })
+@SpringBootApplication(exclude = {SecurityAutoConfiguration.class})
 public class HandymanApplication {
 
     public static void main(String[] args) {
         SpringApplication.run(HandymanApplication.class, args);
     }
-
 
     @Bean
     public ApplicationRunner init(UserRepository userRepository, WorkerRepository workerRepository,
@@ -27,64 +27,63 @@ public class HandymanApplication {
                                   PasswordEncoder passwordEncoder, MessageRepository messageRepository) {
         return args -> {
 
-            // create random users and workers for database
-            String[] firstNames = {"John", "Jane", "Mike", "Sara", "Alex"};
-            String[] lastNames = {"Doe", "Smith", "Johnson", "Williams", "Brown"};
-            String[] locations = {"New York", "San Francisco", "Chicago", "Seattle", "Boston"};
-            String[] skills = {"Plumbing", "Electrical", "Carpentry", "Landscaping", "Painting"};
-            String[] jobDescriptions = {"Fix bathroom leak", "Install ceiling fan", "Build a deck", "Design garden", "Paint living room"};
-            String[] messages = {
-                    "Hey, when can you start?",
-                    "Can you send me a quote?",
-                    "Thank you for your quick work!",
-                    "Do you need any more details from me?",
-                    "I'm available next week, does that work for you?"
+            String[] firstNames = {"John", "Jane", "Mike", "Sara", "Alex", "Emma", "Noah", "Olivia", "Liam", "Sophia"};
+            String[] lastNames = {"Doe", "Smith", "Johnson", "Williams", "Brown", "Jones", "Garcia", "Miller", "Davis", "Rodriguez"};
+            String[] locations = {"New York", "San Francisco", "Chicago", "Seattle", "Boston", "Los Angeles", "Denver", "Austin", "Miami", "Las Vegas"};
+            String[] skills = {"Plumbing", "Electrical", "Carpentry", "Landscaping", "Painting", "Cleaning", "Roofing", "Flooring", "Tiling", "Decorating"};
+            String[] jobDescriptions = {
+                    "Fix bathroom leak", "Install ceiling fan", "Build a deck", "Design garden", "Paint living room",
+                    "Clean the garage", "Replace roof shingles", "Install hardwood floors", "Tile the kitchen backsplash", "Decorate the office"
+            };
+            String[][] messagesContent = {
+                    {"Hey, when can you start?", "Can you send me a quote?", "Thank you for your quick work!", "Do you need any more details from me?", "I'm available next week, does that work for you?"},
+                    {"Can you handle electrical repairs?", "How much do you charge per hour?", "Your work on my neighbor's house was impressive.", "I have an urgent repair, are you available?", "I'd like to schedule a regular maintenance."},
+                    {"Do you offer landscaping services?", "I need my living room painted.", "Can you fix a leaking roof?", "We're renovating our kitchen, can you help?", "Looking for someone to clean my yard."}
             };
             Random random = new Random();
 
-            // create users for database
-            List<User> users = IntStream.rangeClosed(1, 5)
-                    .mapToObj(i -> {
-                        String name = firstNames[random.nextInt(firstNames.length)] + lastNames[random.nextInt(lastNames.length)];
-                        return new User(name.toLowerCase(), passwordEncoder.encode("pass" + i), name.toLowerCase() + "@example.com");
-                    })
+            // Create users
+            List<User> users = IntStream.rangeClosed(1, 10)
+                    .mapToObj(i -> new User(firstNames[random.nextInt(firstNames.length)] + i, passwordEncoder.encode("pass" + i), "user" + i + "@example.com", random.nextDouble() * 1000))
                     .map(userRepository::save)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            // create workers for database
-            List<Worker> workers = IntStream.rangeClosed(1, 5)
-                    .mapToObj(i -> {
-                        String name = firstNames[random.nextInt(firstNames.length)] + lastNames[random.nextInt(lastNames.length)];
-                        String location = locations[random.nextInt(locations.length)];
-                        return new Worker(name.toLowerCase(), passwordEncoder.encode("worker" + i), name.toLowerCase() + "@example.com", "Expert in " + skills[i % skills.length], location, 4.0 + (random.nextDouble() * (5.0 - 4.0)), i, new HashSet<>(), "2024-01-01");
-                    })
+            // Create workers
+            List<Worker> workers = IntStream.rangeClosed(1, 10)
+                    .mapToObj(i -> new Worker(firstNames[random.nextInt(firstNames.length)] + i, passwordEncoder.encode("worker" + i), "worker" + i + "@example.com",
+                            "Expert in " + skills[random.nextInt(skills.length)], locations[random.nextInt(locations.length)], random.nextDouble() * 5, random.nextInt(100),
+                            new HashSet<>(), "09:00-17:00", random.nextDouble() * 1000))
                     .map(workerRepository::save)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            IntStream.range(0, users.size()).forEach(i -> {
-                User client = users.get(i);
-                Worker worker = workers.get(i);
-                String description = jobDescriptions[i % jobDescriptions.length];
-                Job job = new Job(client, worker, random.nextBoolean(), 4.0 + (random.nextDouble() * (5.0 - 4.0)), description, i * 100 + 50, new HashSet<>());
-                jobRepository.save(job);
+            // Create jobs and skills
+            users.forEach(user -> {
+                IntStream.rangeClosed(1, 2).forEach(i -> {
+                    Worker worker = workers.get(random.nextInt(workers.size()));
+                    boolean isCompleted = random.nextBoolean();
+                    Job job = new Job(user, worker, isCompleted, isCompleted ? 1.0 + (random.nextDouble() * 4.0) : null,
+                            jobDescriptions[random.nextInt(jobDescriptions.length)], 100.0 + (random.nextDouble() * 900.0), new HashSet<>());
+                    job = jobRepository.save(job);
 
-                // create skills for database
-                Skill skill = new Skill(skills[i % skills.length], worker, job);
-                skillRepository.save(skill);
-                worker.getSkills().add(skill);
-                job.getSkills().add(skill);
-                skillRepository.save(skill);
+                    Skill skill = new Skill(skills[random.nextInt(skills.length)], worker, job);
+                    skillRepository.save(skill);
+                    worker.getSkills().add(skill);
+                    job.getSkills().add(skill);
+                    workerRepository.save(worker);
+                    jobRepository.save(job);
+                });
             });
 
-            // create messages for database
-            IntStream.rangeClosed(1, 10).forEach(i -> { // Create 10 messages
-                User user = users.get(random.nextInt(users.size())); // Random user
-                Worker worker = workers.get(random.nextInt(workers.size())); // Random worker
-                String content = messages[random.nextInt(messages.length)]; // Random message from the array
-                LocalDateTime timestamp = LocalDateTime.now().minusDays(random.nextInt(30)); // Random timestamp within the last 30 days
-
-                Message message = new Message(user, worker, content, timestamp);
-                messageRepository.save(message); // Save each message to the database
+            // Create messages
+            users.forEach(user -> {
+                Worker worker = workers.get(random.nextInt(workers.size()));
+                String[] selectedMessages = messagesContent[random.nextInt(messagesContent.length)];
+                IntStream.rangeClosed(1, selectedMessages.length).forEach(i -> {
+                    String content = selectedMessages[random.nextInt(selectedMessages.length)];
+                    LocalDateTime timestamp = LocalDateTime.now().minusDays(random.nextInt(30));
+                    Message message = new Message(user, worker, content, timestamp);
+                    messageRepository.save(message);
+                });
             });
         };
     }
